# pyaair

./: .gitignore  README.md  pyproject.toml  test.py
src/pyaair/: __init__.py  airports.py  flights.py
