[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaair"
version = '0.0.0'
description = 'American Airlines scraper in Python'
authors = [
  { name="John Balvin", email="johnchristian@hotmail.es" },
]
readme= "README.md"
license = { text = "MIT" }
keywords=['American airlines',"aa", 'scraper', 'crawler']
dependencies=['bs4','requests']

[project.urls]
Homepage='https://github.com/johnbalvin/pyaair'